--- a/Criando primeiro site do 0/index.html
+++ b/Criando primeiro site do 0/index.html
@@ -11,13 +11,13 @@
 		<div class="logo">
 			<img src="imagens/shopify.png">
 		</div>
-		<div class="link">
+		<div class="links">
 			<ul>
-				<li><a href=""></a>Home</li>
-				<li><a href=""></a>Lojas</li>
-				<li><a href=""></a>Sobre Nós</li>
-				<li><a href=""></a>Carrinho (0)</li>
-				<li><a href=""></a>Entrar</li>
+				<li><a href="">Home</a></li>
+				<li><a href="">Lojas</a></li>
+				<li><a href="">Sobre Nós</a></li>
+				<li><a href="">Carrinho (0)</a></li>
+				<li><a href="">Entrar</a></li>
 			</ul>
 		</div>
 	</nav>
