--- a/Reproduzindo PaginaYoutube/index.html
+++ b/Reproduzindo PaginaYoutube/index.html
@@ -8,7 +8,7 @@
     <title>YouTube</title>
 </head>
 <body>
-   <nav>
+   <nav class="navbar">
         <div class="logo">
             <i class="material-icons">menu</i>
             <img src="Materiais-20240129T192913Z-001/Materiais/images/logo.png">
@@ -24,7 +24,7 @@
             <i class="material-icons">video_call</i>
             <i class="material-icons">apps</i>
             <div class="notification">
-                <i class="material-icons">notification</i>
+                <i class="material-icons">notifications</i>
                 <span data-count="10+"></span>
             </div>
             <img src="Materiais-20240129T192913Z-001/Materiais/images/logomarca.png" alt="logomarca">
