--- a/Reproduzindo PaginaYoutube/index.html
+++ b/Reproduzindo PaginaYoutube/index.html
@@ -29,7 +29,68 @@
             </div>
             <img src="Materiais-20240129T192913Z-001/Materiais/images/logomarca.png" alt="logomarca">
         </div>
-   </nav>
+   </nav>   
+   <div class="sidebar">
+        <div class="links">
+            <div class="icon">
+                <a href=""><i class="material-icons">home</i>
+                    <span>Home</span></a>
+            </div>
+            <div class="icon">
+                <a href=""><i class="material-icons">explore</i>
+                    <span>Explorar</span></a>
+            </div>
+            <div class="icon">
+                <a href=""><i class="material-icons">subscriptions</i>
+                    <span>Inscrições</span></a>
+            </div>
+        </div>
+        <div class="links link-2">
+            <div class="icon">
+                <a href=""><i class="material-icons">video_library</i>
+                    <span>Biblioteca</span>
+                </a>
+            </div>
+            <div class="icon">
+                <a href=""><i class="material-icons">history</i>
+                    <span>Histórico</span>
+                </a>
+            </div>
+            <div class="icon">
+                <a href=""><i class="material-icons">watch_later</i>
+                    <span>Assistir mais tarde</span>
+                </a>
+            </div>
+            <div class="icon">
+                <a href=""><i class="material-icons">thumb_up</i>
+                    <span>Vídeos marcados</span>
+                </a>
+            </div>
+        </div>
+        <div class="subscriptions links">
+            <h4>INSCRIÇÕES</h4>
+            <div class="icon">
+                <a href=""><i class="material-icons">audiotrack</i>
+                    <span>Música</span>
+                </a>
+            </div>
+            <div class="icon">
+                <a href=""><i class="material-icons">emoji_events</i>
+                    <span>Esporte</span>
+                </a>
+            </div>
+            <div class="icon">
+                <a href=""><i class="material-icons">sports_esports</i>
+                    <span>Gaming</span>
+                </a>
+            </div>
+            <div class="icon">
+                <a href=""><i class="material-icons">movie</i>
+                    <span>Cinema</span>
+                </a>
+            </div>
+        </div>
+   </div>
     
 </body>
 </html>
