--- a/Reproduzindo PaginaYoutube/index.html
+++ b/Reproduzindo PaginaYoutube/index.html
@@ -45,7 +45,7 @@
                     <span>Inscrições</span></a>
             </div>
         </div>
-        <div class="links link-2">
+        <div class="links links-2">
             <div class="icon">
                 <a href=""><i class="material-icons">video_library</i>
                     <span>Biblioteca</span>
