--- a/Reproduzindo PaginaYoutube/index.html
+++ b/Reproduzindo PaginaYoutube/index.html
@@ -91,6 +91,184 @@
             </div>
         </div>
    </div>
+   <div class="content">
+        <div class="´/]^:">
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="images/thumb1.jpg" alt="">
+                    <span>30:14</span>
+                </div>
+                <div class="video-info">
+                    <div class="user">
+                        <img src="images/logomarca.png" alt="">
+                    </div>
+                    <div class="text">
+                        <span class="title">Aprenda Python Agora com esse video</span>
+                        <span>Cody Academy</span>
+                        <div>
+                            <span class="views">280 Visualizações</span>
+                            <span>2 horas Atrás</span>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="videos">
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="images/thumb2.jpg" alt="">
+                    <span>5:10</span>
+                </div>
+                <div class="video-info">
+                    <div class="user">
+                        <img src="images/logomarca.png" alt="">
+                    </div>
+                    <div class="text">
+                        <span class="title">Entenda o que são os chamados NFTs</span>
+                        <span>Cody Academy</span>
+                        <div>
+                            <span class="views">1600 Visualizações</span>
+                            <span>1 horas Atrás</span>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="videos">
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="images/thumb3.jpg" alt="">
+                    <span>2:23:22</span>
+                </div>
+                <div class="video-info">
+                    <div class="user">
+                        <img src="images/logomarca.png" alt="">
+                    </div>
+                    <div class="text">
+                        <span class="title">Aulão | Criando o game River Raid na Unity </span>
+                        <span>Cody Academy</span>
+                        <div>
+                            <span class="views">330 Visualizações</span>
+                            <span>2 semanas atrás</span>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="videos">
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="images/thumb4.jpg" alt="">
+                    <span>1:03:00</span>
+                </div>
+                <div class="video-info">
+                    <div class="user">
+                        <img src="images/logomarca.png" alt="">
+                    </div>
+                    <div class="text">
+                        <span class="title">Recriando o aplicativo com HTML , CSS , JS</span>
+                        <span>Cody Academy</span>
+                        <div>
+                            <span class="views">250 Visualizações</span>
+                            <span>4 Semanas atrás </span>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="videos">
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="images/thumb5.jpg" alt="">
+                    <span>01:02:06</span>
+                </div>
+                <div class="video-info">
+                    <div class="user">
+                        <img src="images/logomarca.png" alt="">
+                    </div>
+                    <div class="text">
+                        <span class="title">Criando uma tela de login com HTLM e CSS</span>
+                        <span>Cody Academy</span>
+                        <div>
+                            <span class="views">280 Visualizações</span>
+                            <span>1 mÊs atrás</span>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="videos">
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="images/thumb6.jpg" alt="">
+                    <span>50:26</span>
+                </div>
+                <div class="video-info">
+                    <div class="user">
+                        <img src="images/logomarca.png" alt="">
+                    </div>
+                    <div class="text">
+                        <span class="title">Criando um Game de Plataforma com HTML , CSS , JS</span>
+                        <span>Cody Academy</span>
+                        <div>
+                            <span class="views">1230Visualizações</span>
+                            <span>2 mêses atrás</span>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="videos">
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="images/thumb7.jpg" alt="">
+                    <span>01:30:28 </span>
+                </div>
+                <div class="video-info">
+                    <div class="user">
+                        <img src="images/logomarca.png" alt="">
+                    </div>
+                    <div class="text">
+                        <span class="title">Recriando o game Street Figthers 2 no Construct </span>
+                        <span>Cody Academy</span>
+                        <div>
+                            <span class="views">3036 Visualizações</span>
+                            <span>4 mêses atrás</span>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="videos">
+            <div class="video">
+                <div class="thumbnail">
+                    <img src="images/thumb8.jpg" alt="">
+                    <span>1:00:02</span>
+                </div>
+                <div class="video-info">
+                    <div class="user">
+                        <img src="images/logomarca.png" alt="">
+                    </div>
+                    <div class="text">
+                        <span class="title">Aprensa Pixel Art em apenas 1 hora com o Piskel</span>
+                        <span>Cody Academy</span>
+                        <div>
+                            <span class="views">1345 Visualizações</span>
+                            <span>1 Ano atrás</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+   </div>
     
 </body>
 </html>
